testsuite/poke.pkl/union-diag-8.pk
/* { dg-do compile } */

/* Check for anonymous members in unions.  */

type Foo = union
  {
    int a;
    int; /* { dg-error "" } */
  };
